# server/controllers/user.controller.js
@@ -7,13 +7,14 @@ const userSchema = Joi.object({
   email: Joi.string().email(),
   mobileNumber: Joi.string().regex(/^[1-9][0-9]{9}$/),
   password: Joi.string().required(),
-  repeatPassword: Joi.string().required().valid(Joi.ref('password'))
-})
-
+  repeatPassword: Joi.string()
+    .required()
+    .valid(Joi.ref('password'))
+});
 
 module.exports = {
   insert
-}
+};
 
 async function insert(user) {
   user = await Joi.validate(user, userSchema, { abortEarly: false });
